--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,7 @@
 {
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "vue"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.codeActionsOnSave": [
-    "source.organizeImports",
-    "source.fixAll.eslint",
-    "source.fixAll.stylelint"
-  ],
+  "editor.codeActionsOnSave": ["source.organizeImports", "source.fixAll.eslint"],
   "editor.formatOnPaste": false,
   "editor.formatOnSave": true,
   "editor.formatOnType": false
